force-app/main/default/objects/IntegrationTransaction__c/IntegrationTransaction__c.object-meta.xml
<CustomObject>
    <label>Integration Transaction</label>
    <nameField>
        <displayFormat>INT-{000000}</displayFormat>
        <label>Integration Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>