force-app/main/default/objects/IntegrationTransaction__c/fields/AttemptCount__c.field-meta.xml
<CustomField>
    <fullName>AttemptCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Attempt Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>