force-app/main/default/objects/IntegrationTransaction__c/fields/CompletedAt__c.field-meta.xml
<CustomField>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>