force-app/main/default/objects/IntegrationTransaction__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>RETRY</fullName>
            </value>
            <value>
                <fullName>RECONCILE</fullName>
            </value>
            <value>
                <fullName>MANUAL</fullName>
            </value>
            <value>
                <fullName>TERMINAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>