force-app/main/default/objects/IntegrationTransaction__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>