force-app/main/default/objects/IntegrationTransaction__c/fields/IdempotencyKey__c.field-meta.xml
<CustomField>
    <fullName>IdempotencyKey__c</fullName>
    <label>Idempotency Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>