force-app/main/default/objects/IntegrationTransaction__c/fields/IntegrationKey__c.field-meta.xml
<CustomField>
    <fullName>IntegrationKey__c</fullName>
    <label>Integration Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>