force-app/main/default/objects/IntegrationTransaction__c/fields/LeaseExpiresAt__c.field-meta.xml
<CustomField>
    <fullName>LeaseExpiresAt__c</fullName>
    <label>Lease Expires At</label>
    <type>DateTime</type>
</CustomField>