force-app/main/default/objects/IntegrationTransaction__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>