force-app/main/default/objects/IntegrationTransaction__c/fields/ProcessingStartedAt__c.field-meta.xml
<CustomField>
    <fullName>ProcessingStartedAt__c</fullName>
    <label>Processing Started At</label>
    <type>DateTime</type>
</CustomField>